# fast-microservice-structure

./: .gitignore  pyproject.toml
api/: main.py
api/app/core/: app_config.py
api/routes/: modules.py
api/routes/foo/: foo.py
api/routes/foo/models/: body.py
tests/: test_fast_microservice_structure.py
