[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["developer kitchen <topluluk@developerkitchen.dev>"]

readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
leanapi = "^0.0.5"
sqlraw = "^0.1.2"
unicorn = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "api.main:start"
